--- a/Dima.Web/Pages/Identity/Login.razor
+++ b/Dima.Web/Pages/Identity/Login.razor
@@ -1,5 +1,12 @@
 ﻿@page "/login"
 @layout HeadlessLayout
 
-<h1>Login</h1>
-<h2>Tela de Login</h2>
+<PageTitle>Dima - Entrar</PageTitle>
+
+<MudGrid Justify="Justify.Center">
+    <MudItem xs="12">
+        <MudPaper>
+            Autentique-se
+        </MudPaper>
+    </MudItem>
+</MudGrid>
