--- a/Dima.Web/Pages/Identity/Login.razor
+++ b/Dima.Web/Pages/Identity/Login.razor
@@ -4,7 +4,7 @@
 <PageTitle>Dima - Entrar</PageTitle>
 
 <MudGrid Justify="Justify.Center">
-    <MudItem xs="12">
+    <MudItem xs="12" sm="12" md="8" lg="6" xl="6" xxl="6">
         <MudPaper>
             Autentique-se
         </MudPaper>
