--- a/Dima.Web/Pages/Identity/Login.razor
+++ b/Dima.Web/Pages/Identity/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/login"
+@using System.ComponentModel.DataAnnotations
 @layout HeadlessLayout
 
 <PageTitle>Dima - Entrar</PageTitle>
@@ -6,12 +7,28 @@
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12" sm="12" md="8" lg="6" xl="6" xxl="6">
         <MudPaper Class="mud-width-full pa-8">
-            <div class="d-flex justify-center pb-8 pt-8"> 
+            <div class="d-flex justify-center pb-8 pt-8">
                 <img src="imgs/dima.png"
                      alt="Dima - Controle Financeiro"
                      width="200" />
             </div>
-            <h1>Autentique-se</h1>
+            <MudForm @ref="_mudForm">
+                <MudTextField T="string"
+                    Label="E-mail"
+                    InputType="InputType.Email"
+                    Required="true"
+                    RequiredError="Informe o E-mail"
+                    Validation="@(new EmailAddressAttribute{ErrorMessage = "E-mail inválido"})"/>
+                <MudTextField T="string"
+                    Label="Senha"
+                    InputType="InputType.Password"
+                    Required="true"
+                    RequiredError="Senha inválida"/>
+            </MudForm>
         </MudPaper>
     </MudItem>
 </MudGrid>
+
+@code {
+    MudForm? _mudForm;
+}
