--- a/Dima.Web/Pages/Identity/Login.razor
+++ b/Dima.Web/Pages/Identity/Login.razor
@@ -25,6 +25,11 @@
                     Required="true"
                     RequiredError="Senha inválida"/>
             </MudForm>
+            <div class="d-flex mt-8">
+                <MudButton Variant="Variant.Filled" Color="Color.Primary">ENTRAR</MudButton>
+                <MudSpacer/>
+                <MudButton Href="/comecar">REGISTRAR</MudButton>
+            </div>
         </MudPaper>
     </MudItem>
 </MudGrid>
