--- a/Dima.Web/_Imports.razor
+++ b/Dima.Web/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using System.ComponentModel.DataAnnotations
 @using System.Net.Http.Json
 
 @using Microsoft.AspNetCore.Components.Forms
