--- a/Dima.Web/Pages/Identity/Register.razor
+++ b/Dima.Web/Pages/Identity/Register.razor
@@ -1,5 +1,6 @@
 ﻿@page "/comecar"
 @layout HeadlessLayout
+@inherits RegisterPage
 
 <PageTitle>Dima - Entrar</PageTitle>
 
@@ -32,7 +33,3 @@
         </MudPaper>
     </MudItem>
 </MudGrid>
-
-@code {
-    MudForm? _mudForm;
-}
