--- a/Dima.Web/Pages/Identity/Register.razor
+++ b/Dima.Web/Pages/Identity/Register.razor
@@ -1,6 +1,8 @@
 ﻿@page "/comecar"
+@using Dima.Web.Security
 @layout HeadlessLayout
 @inherits RegisterPage
+@inject CookieAuthenticationStateProvider authState
 
 <PageTitle>Dima - Entrar</PageTitle>
 
