--- a/Dima.Web/Pages/Identity/Register.razor
+++ b/Dima.Web/Pages/Identity/Register.razor
@@ -14,24 +14,37 @@
                      alt="Dima - Controle Financeiro"
                      width="200" />
             </div>
-            <MudForm @ref="_mudForm">
+            <EditForm Model="@InputModel" OnValidSubmit="OnValidSubmitAsync">
+                <DataAnnotationsValidator />
+
                 <MudTextField T="string"
                               Label="E-mail"
+                              HelperText="Campo obrigatório"
                               InputType="InputType.Email"
-                              Required="true"
-                              RequiredError="Informe o E-mail"
-                              Validation="@(new EmailAddressAttribute{ErrorMessage = "E-mail inválido"})" />
+                              For="@(() => InputModel.Email)"
+                              @bind-Value="InputModel.Email" />
+
                 <MudTextField T="string"
                               Label="Senha"
+                              HelperText="Campo obrigatório"
                               InputType="InputType.Password"
-                              Required="true"
-                              RequiredError="Senha inválida" />
-            </MudForm>
-            <div class="d-flex mt-8">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary">COMEÇAR</MudButton>
-                <MudSpacer />
-                <MudButton Href="/login">JÁ TENHO UMA CONTA</MudButton>
-            </div>
+                              For="@(() => InputModel.Password)"
+                              @bind-Value="InputModel.Password" />
+
+                <div class="d-flex mt-8">
+                    @if (IsBusy)
+                    {
+                        <MudProgressCircular Color="Color.Info" Indeterminate=true/>
+                    }
+                    else
+                    {
+                        <MudButton ButtonType=ButtonType.Submit Variant="Variant.Filled" Color="Color.Primary">COMEÇAR</MudButton>
+                        <MudSpacer />
+                        <MudButton Href="/login">JÁ TENHO UMA CONTA</MudButton>
+                    }
+                </div>
+            </EditForm>
+
         </MudPaper>
     </MudItem>
 </MudGrid>
