--- a/Dima.Web/Pages/Identity/Login.razor
+++ b/Dima.Web/Pages/Identity/Login.razor
@@ -1,5 +1,6 @@
 ﻿@page "/login"
 @layout HeadlessLayout
+@inherits LoginPage
 
 <PageTitle>Dima - Entrar</PageTitle>
 
@@ -11,28 +12,36 @@
                      alt="Dima - Controle Financeiro"
                      width="200" />
             </div>
-            <MudForm @ref="_mudForm">
+            <EditForm Model="@InputModel" OnValidSubmit="OnValidSubmitAsync">
+                <DataAnnotationsValidator />
+
                 <MudTextField T="string"
-                    Label="E-mail"
-                    InputType="InputType.Email"
-                    Required="true"
-                    RequiredError="Informe o E-mail"
-                    Validation="@(new EmailAddressAttribute{ErrorMessage = "E-mail inválido"})"/>
+                              Label="E-mail"
+                              HelperText="Campo obrigatório"
+                              InputType="InputType.Email"
+                              For="@(() => InputModel.Email)"
+                              @bind-Value="InputModel.Email" />
+
                 <MudTextField T="string"
-                    Label="Senha"
-                    InputType="InputType.Password"
-                    Required="true"
-                    RequiredError="Senha inválida"/>
-            </MudForm>
-            <div class="d-flex mt-8">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary">ENTRAR</MudButton>
-                <MudSpacer/>
-                <MudButton Href="/comecar">REGISTRAR</MudButton>
-            </div>
+                              Label="Senha"
+                              HelperText="Campo obrigatório"
+                              InputType="InputType.Password"
+                              For="@(() => InputModel.Password)"
+                              @bind-Value="InputModel.Password" />
+
+                <div class="d-flex mt-8">
+                    @if (IsBusy)
+                    {
+                        <MudProgressCircular Color="Color.Info" Indeterminate=true />
+                    }
+                    else
+                    {
+                        <MudButton ButtonType=ButtonType.Submit Variant="Variant.Filled" Color="Color.Primary">ENTRAR</MudButton>
+                        <MudSpacer />
+                        <MudButton Href="/comecar">QUERO ME CADASTRAR</MudButton>
+                    }
+                </div>
+            </EditForm>
         </MudPaper>
     </MudItem>
 </MudGrid>
-
-@code {
-    MudForm? _mudForm;
-}
