--- a/Dima.Web/Pages/Identity/Logout.razor
+++ b/Dima.Web/Pages/Identity/Logout.razor
@@ -12,9 +12,11 @@
              width="200" />
     </div>
     <MudAlert Severity="Severity.Info">
-        Finalizando a sessão...
-        <MudButton Variant="Variant.Text" Href="/">
-            IR PARA TELA DE LOGIN
-        </MudButton> 
+        <div>
+            Sessão Finalizada...
+            <MudButton Variant="Variant.Text" Href="/">
+                IR PARA TELA DE LOGIN
+            </MudButton>
+        </div>
     </MudAlert>
 </MudPaper>
