--- a/Dima.Web/Layout/MainLayout.razor
+++ b/Dima.Web/Layout/MainLayout.razor
@@ -7,13 +7,27 @@
     <Authorized>
         <MudLayout>
             <MudAppBar>
+                <MudIconButton 
+                    Icon="@Icons.Material.Filled.Menu"
+                    Color="Color.Inherit"
+                    Edge="Edge.Start"
+                    OnClick="ToggleDrawer"/>
                 Dima
                 <MudSpacer />
                 <MudText Typo="Typo.caption">
                     @context.User.Identity?.Name
                 </MudText>
-                <MudSwitch @bind-Value="@_isDarkMode" />
+                <MudSwitch 
+                    Color="Color.Inherit"
+                    @bind-Value="@_isDarkMode" 
+                    T="bool"
+                    Class="ma-4"
+                    ThumbIcon="@Icons.TwoTone.Lightbulb"
+                    />
             </MudAppBar>
+            <MudDrawer @bind-Open="@_isDrawerOpened">
+                <h3>Nav Menu</h3>
+            </MudDrawer>
             <MudMainContent>
                 <MudContainer>
                     @Body
@@ -28,6 +42,7 @@
 </AuthorizeView>
 
 @code {
+    private bool _isDrawerOpened = true;
     private bool _isDarkMode = true;
     private MudThemeProvider _mudThemeProvider = null!;
 
@@ -46,5 +61,10 @@
         _isDarkMode = newValue;
         StateHasChanged();
         return Task.CompletedTask;
+    }
+
+    private void ToggleDrawer()
+    {
+        _isDrawerOpened = !_isDrawerOpened;
     }
 }
