--- a/Dima.Web/Layout/MainLayout.razor
+++ b/Dima.Web/Layout/MainLayout.razor
@@ -26,7 +26,7 @@
                 <NavMenu />
             </MudDrawer>
             <MudMainContent>
-                <MudContainer>
+                <MudContainer Class="mt-4">
                     @Body
                 </MudContainer>
             </MudMainContent>
