--- a/Dima.Web/_Imports.razor
+++ b/Dima.Web/_Imports.razor
@@ -14,6 +14,7 @@
 @using MudBlazor
 @using MudBlazor.Utilities
 
+@using Dima.Core.Enums
 @using Dima.Web
 @using Dima.Web.Layout
 @using Dima.Web.Components
