--- a/Dima.Web/Pages/Transactions/Create.razor
+++ b/Dima.Web/Pages/Transactions/Create.razor
@@ -45,5 +45,10 @@
             }
 
         </MudSelect>
+
+        <MudButton ButtonType="ButtonType.Submit"
+                   Variant="Variant.Filled"
+                   Color="Color.Primary"
+                   Class="mt-4">Salvar</MudButton>
     </EditForm>
 </MudPaper>
