--- a/Dima.Web/Pages/Transactions/List.razor
+++ b/Dima.Web/Pages/Transactions/List.razor
@@ -1,2 +1,11 @@
 ﻿@page "/lancamentos/historico"
 @inherits ListTransactionsPage
+
+<MudText Typo="Typo.h3">Lançamentos</MudText>
+
+<MudDataGrid Items="@Transactions"
+             Filterable="true" QuickFilter="Filter"
+             Hideable="true"
+             ColumnResizeMode="ResizeMode.Column">
+
+</MudDataGrid>
