--- a/Dima.Web/Pages/Transactions/List.razor
+++ b/Dima.Web/Pages/Transactions/List.razor
@@ -42,5 +42,13 @@
                         Sortable="true">
             <FooterTemplate>@context.Items.Sum(x => x.Amount).ToString("C")</FooterTemplate>
         </PropertyColumn>
+        <TemplateColumn Class="d-flex justify-end">
+            <CellTemplate>
+                <MudStack Row>
+                    <MudIconButton Icon="@Icons.Material.Filled.Edit" Color="Color.Primary" Href="@($"/lancamentos/editar/{context.Item.Id}")"></MudIconButton>
+                    <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Error" OnClick="() => OnDeleteButtonClickedAsync(context.Item.Id, context.Item.Title)"></MudIconButton>
+                </MudStack>
+            </CellTemplate>
+        </TemplateColumn>
     </Columns>
 </MudDataGrid>
