--- a/Dima.Web/Pages/Transactions/List.razor
+++ b/Dima.Web/Pages/Transactions/List.razor
@@ -34,7 +34,7 @@
                Variant="Variant.Filled"
                Color="Color.Primary"
                StartIcon="@Icons.TwoTone.Search"
-               OnClick="() => {}"> Pesquisar</MudButton>
+               OnClick="OnSearchAsync"> Pesquisar</MudButton>
 </div>
 
 <MudDataGrid Items="@Transactions"
