--- a/Dima.Web/Layout/MainLayout.razor
+++ b/Dima.Web/Layout/MainLayout.razor
@@ -14,6 +14,12 @@
                                OnClick="ToggleDrawer" />
                 Dima
                 <MudSpacer />
+                <MudButton Href="/lancamentos/novo"
+                           Variant="Variant.Text"
+                           StartIcon="@Icons.TwoTone.Add">
+                    Novo lançamento
+                </MudButton>
+                <MudSpacer />
                 <MudText Typo="Typo.caption">
                     @context.User.Identity?.Name
                 </MudText>
