--- a/Dima.Web/Components/Reports/ExpensesByCategoryChart.razor
+++ b/Dima.Web/Components/Reports/ExpensesByCategoryChart.razor
@@ -1,11 +1,11 @@
-@inherits ExpensesByCategoryChartComponent
+@* @inherits ExpensesByCategoryChartComponent
 
 @if (Data.Count > 0)
 {
     <MudChart
         ChartType="ChartType.Pie"
         InputData="@Data.ToArray()"
-        InputLabels ="@Labels.ToArray()"
+        InputLabels="@Labels.ToArray()"
         Width="100%"
         Height="350px"/>
 }
@@ -14,4 +14,4 @@ else
     <div class="d-flex align-center justify-center" style="height: 350px">
         <MudProgressCircular Indeterminate="true" Color="Color.Primary"/>
     </div>
-}
+} *@
