--- a/Dima.Web/Layout/MainLayout.razor
+++ b/Dima.Web/Layout/MainLayout.razor
@@ -16,6 +16,7 @@
                 <MudSpacer />
                 <MudButton Href="/lancamentos/novo"
                            Variant="Variant.Text"
+                           Color="Color.Dark"
                            StartIcon="@Icons.TwoTone.Add">
                     Novo lançamento
                 </MudButton>
