--- a/Dima.Web/Pages/Orders/Checkout.razor
+++ b/Dima.Web/Pages/Orders/Checkout.razor
@@ -14,9 +14,28 @@
                         </MudText>
                     </MudListItem>
                     <MudDivider />
-                    VOUCHER
+                    <MudListItem Icon="@( Voucher is null ? Icons.Material.Filled.Discount
+                                                                                        : Icons.Material.Filled.CheckCircle)">
+                        <MudTextField T="string"
+                                      Disabled="@(Voucher is not null)"
+                                      Placeholder="Cupom de desconto"
+                                      @bind-Value="@VoucherNumber"
+                                      Mask="Mask"
+                                      Adornment="Adornment.End"
+                                      AdornmentIcon="@Icons.Material.Filled.FactCheck"
+                                      OnAdornmentClick="@(() => {})" />
+
+                    </MudListItem>
+                    <MudListItem Icon="@Icons.Material.Filled.MoneyOff">
+                        <div class="d-flex">
+                            <MudText>Desconto</MudText>
+                            <MudText Class="ml-auto">
+                                @(Voucher?.Amount.ToString("C"))
+                            </MudText>
+                        </div>
+                    </MudListItem>
                     <MudDivider />
-                    <div class="mt-auto">
+                    <div class="mt-auto pa-4">
                         <MudText>Total: </MudText>
                         <MudText Class="ml-auto">
                             <strong>
@@ -26,7 +45,8 @@
                     </div>
                 </MudList>
             </MudPaper>
-            <MudButton Variant="Variant.Filled"
+            <MudButton @onclick="OnValidSubmitAsync"
+                       Variant="Variant.Filled"
                        Color="Color.Primary"
                        Disabled="@(!IsValid)"
                        DisableElevation="true"
@@ -34,7 +54,7 @@
                        Class="mt-6"
                        FullWidth="true">
 
-                    FINALIZAR PEDIDO
+                FINALIZAR PEDIDO
             </MudButton>
         </MudItem>
     </MudGrid>
